Ejercicio del Cálculo de IMC

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /modulo1/proyectos/EstructurasIterativas/build/
+/modulo1/proyectos/E_CalculoIMC/nbproject/private/
+/modulo1/proyectos/E_CalculoIMC/build/
