Modificaciones generales y el ejercicio de Tienda

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /modulo1/proyectos/Interfaces/build/
 /modulo1/proyectos/Excepciones/build/
 /modulo1/proyectos/Excepciones/dist/
+/modulo1/proyectos/AnthonyHurtado_TiendaPeliculas/nbproject/private/
+/modulo1/proyectos/AnthonyHurtado_TiendaPeliculas/build/
