Actualización de los ejercicios en clase

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 /modulo1/proyectos/Excepciones/dist/
 /modulo1/proyectos/AnthonyHurtado_TiendaPeliculas/nbproject/private/
 /modulo1/proyectos/AnthonyHurtado_TiendaPeliculas/build/
+/modulo1/proyectos/ClaseAbstracta01/build/
+/modulo1/proyectos/ClaseAbstracta02/build/
+/modulo1/proyectos/PaquetesImports/build/
+/modulo1/proyectos/PersonaLibreria/nbproject/private/
+/modulo1/proyectos/PersonaUsar/nbproject/private/
+/modulo1/proyectos/PersonaLibreria/build/
+/modulo1/proyectos/PersonaLibreria/dist/
+/modulo1/proyectos/PersonaUsar/build/
