Cambios de nombres de proyectos

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@
 /modulo1/proyectos/PersonaLibreria/build/
 /modulo1/proyectos/PersonaLibreria/dist/
 /modulo1/proyectos/PersonaUsar/build/
+/modulo1/proyectos/E_PersonaLibreria/nbproject/private/
+/modulo1/proyectos/E_PersonaUsar/nbproject/private/
