Evaluación de la tienda de películas del grupo 1 y 2

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@
 /modulo1/evaluación - grupo1/JelitzaMena_TiendaPelicula/build/
 /modulo1/evaluación - grupo1/JoseRomero_TiendaPelicula/nbproject/private/
 /modulo1/evaluación - grupo1/JoseRomero_TiendaPelicula/build/
+/modulo1/evaluación - grupo2/JesusZerpa_TiendaPelicula/nbproject/private/
