--- a/modulo2/proyectos/ConexionBD/nbproject/private/private.properties
+++ b/modulo2/proyectos/ConexionBD/nbproject/private/private.properties
@@ -1,2 +1,2 @@
-file.reference.mysql-connector-java-5.1.45-bin.jar-1=C:\\code\\projects\\carrera-java\\Librerias\\mysql-connector-java-5.1.45-bin.jar
-user.properties.file=C:\\Users\\shaka\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.45-bin.jar-1=/home/evento/curso-java/recursos/mysql-connector-java-5.1.45-bin.jar
+user.properties.file=/home/evento/.netbeans/8.2/build.properties
