Ejercicios realizados en clase, recursos y presentaciones

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,12 @@
 /modulo1/evaluación - grupo1/JoseRomero_TiendaPelicula/nbproject/private/
 /modulo1/evaluación - grupo1/JoseRomero_TiendaPelicula/build/
 /modulo1/evaluación - grupo2/JesusZerpa_TiendaPelicula/nbproject/private/
+/modulo2/proyectos/ConexionBD/build/
+/modulo2/proyectos/SwingJFrame/build/
+/modulo2/proyectos/SwingNetbeans/build/
+/modulo2/proyectos/E_CalculoIMC/nbproject/private/
+/modulo2/proyectos/E_IMCCalculate/nbproject/private/
+/modulo2/proyectos/E_IMCCalculate/build/
+/modulo2/proyectos/E_Internacionalizacion/nbproject/private/
+/modulo2/proyectos/E_Internacionalizacion/build/
+/modulo2/proyectos/E_Internacionalizacion/dist/
