--- a/modulo2/proyectos/ConexionBD/nbproject/project.properties
+++ b/modulo2/proyectos/ConexionBD/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ConexionBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.45-bin.jar-1=/home/instructor/Descargas/mysql-connector-java-5.1.45/mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=../../../recursos/mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
