Actualización de ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,6 @@
 /modulo2/proyectos/E_Internacionalizacion/nbproject/private/
 /modulo2/proyectos/E_Internacionalizacion/build/
 /modulo2/proyectos/E_Internacionalizacion/dist/
+/modulo2/proyectos/E_CajeroAutomatico_Base/nbproject/private/
+/modulo2/proyectos/E_ATM/nbproject/private/
+/modulo2/proyectos/E_ATM/build/
