Modificación de las rutas

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /modulo2/proyectos/E_CajeroAutomatico_Base/nbproject/private/
 /modulo2/proyectos/E_ATM/nbproject/private/
 /modulo2/proyectos/E_ATM/build/
+/modulo1/proyectos/AnthonyHurtado_TiendaPeliculas/dist/
