Añadiendo libreria de PrimeFaces

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,10 @@
 /modulo2/evaluación - grupo1/ATM_AndresGordillo/build/
 /modulo2/evaluación - grupo1/ATM_AndresGordillo/dist/
 /modulo2/evaluación - grupo1/ATM_EdwardLopez/build/
+/modulo3/proyectos/E_ComponenteMensaje/nbproject/private/
+/modulo3/proyectos/MiPrimerProyectoJSF/nbproject/private/
+/modulo3/proyectos/ValidadorDeDatos/nbproject/private/
+/modulo3/proyectos/ConversionDeDatos/nbproject/private/
+/modulo3/proyectos/PlantillasJSF/nbproject/private/
+/modulo3/proyectos/E_Bank/nbproject/private/
+/modulo3/proyectos/ReglasDeNavegacion/nbproject/private/
