Actualización de los ejercicios en clase

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,8 @@
 /modulo2/evaluación - grupo2/ATM_JoseBautista/build/
 /modulo2/evaluación - grupo2/ATM_JoseEspinoza/build/
 /modulo2/evaluación - grupo2/ATM_JoseGalia/build/
+/modulo3/proyectos/E_ComponenteMensaje/build/
+/modulo2/proyectos/WebApplication1/nbproject/private/
+/modulo3/proyectos/Plantillas/dist/
+/modulo2/proyectos/E_Calculadora/dist/
+/modulo2/proyectos/E_IMCCalculate/dist/
