Actualización de los ejercicios y presentaciones

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,5 @@
 /modulo3/proyectos/Plantillas/dist/
 /modulo2/proyectos/E_Calculadora/dist/
 /modulo2/proyectos/E_IMCCalculate/dist/
+/modulo3/proyectos/UsoDeAjax/dist/
+/modulo3/proyectos/ComponentesCompuestos/dist/
