Actualización de los ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,4 @@
 /modulo2/proyectos/E_IMCCalculate/dist/
 /modulo3/proyectos/UsoDeAjax/dist/
 /modulo3/proyectos/ComponentesCompuestos/dist/
+/modulo3/proyectos/SoporteHtml5/dist/
