Proyecto base de la evaluación

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@
 /modulo3/proyectos/UsoDeAjax/dist/
 /modulo3/proyectos/ComponentesCompuestos/dist/
 /modulo3/proyectos/SoporteHtml5/dist/
+/modulo2/proyectos/E_Bank/nbproject/private/
+/modulo2/proyectos/E_Bank/build/
+/modulo2/proyectos/E_Bank/dist/
