Evaluación del tercer módulo primer grupo

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@
 /modulo2/evaluación - grupo2/RatzarProyectoModulo2/nbproject/private/
 /modulo2/evaluación - grupo2/ATM_RatzarPerez/nbproject/private/
 /modulo2/evaluación - grupo2/ATM_RatzarPerez/build/
+/modulo3/evaluación - grupo1/Banco_JorgeV_HildermarG/nbproject/private/
+/modulo3/evaluación - grupo1/Banco_JorgeV_HildermarG/build/
