Actualización de los ejercicios en clase

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,5 @@
 /modulo3/evaluación - grupo1/Banco_JorgeV_HildermarG/nbproject/private/
 /modulo3/evaluación - grupo1/Banco_JorgeV_HildermarG/build/
 /modulo3/proyectos/Prueba/nbproject/private/
+/modulo3/proyectos/E_ComponenteMensaje/dist/
+/modulo3/proyectos/PrimeFaces/dist/
